Added code to handle NPE.